<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/user"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            android:background="@color/title_blue"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/usertitle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/title_blue"
                android:gravity="center"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="190"
            android:background="@drawable/userbg"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/trans"
                android:gravity="center_vertical"
                android:text="@string/nameexa"
                   android:textColor="@color/orange"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="380"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/ctn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/myctnb"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="卖家消息"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/myorder"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/myorder"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/myaddress"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/myaddress"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/aboutus"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/aboutus"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="76"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>